samples/_failures_safe/1761290935_a598f1_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_53bc2fbb.c: In function ‘tokenize’:
./samples/SAFE/__tmp_53bc2fbb.c:173:13: error: expected expression at end of input
  173 |             tokens[token_count++] =
      |             ^~~~~~
./samples/SAFE/__tmp_53bc2fbb.c:173:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_53bc2fbb.c:173:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_53bc2fbb.c:173:13: error: expected declaration or statement at end of input
